syntax = "proto3";
package auth;

option go_package = "github.com/shellingford330/auth/presentation/grpc/go/auth";

service Auth {
  rpc VerifyAccessToken(VerifyAccessTokenRequest) returns (VerifyAccessTokenResponse) {}
}

message VerifyAccessTokenRequest {
  string access_token = 1;
  string user_id = 2;
}

message VerifyAccessTokenResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string image = 4;
} 
